    - tests-Cleanup-mix-test.patch
    - tests-Fix-mix-test-on-big-endian-systems.patch
    - util-Fix-pa_get_binary_name-on-Debian-kFreeBSD.patch
    - util-Try-finding-out-application-name-using-dladdr.patch
    - zsh-completion-Fix-completion-for-default-sink-sourc.patch
  * Refreshed debian/patches/gnu-kfreebsd.patch
  * Remove all references to start-pulseaudio-kde, it was dropped upstream

 -- Luke Yelavich <themuso@ubuntu.com>  Tue, 25 Nov 2014 09:39:16 +1100

pulseaudio (5.0-13) unstable; urgency=medium

  * Replace raop channels patch with proper fix from upstream.
  * Release to unstable.

 -- Felipe Sateler <fsateler@debian.org>  Sat, 11 Oct 2014 01:24:59 -0300

pulseaudio (5.0-12) experimental; urgency=medium

  * Import patch from upstream fixing float endianness swap.

 -- Felipe Sateler <fsateler@debian.org>  Wed, 03 Sep 2014 15:38:47 -0400

pulseaudio (5.0-11) experimental; urgency=medium

  * Fix crash when main cannot be found in patch
    util-Try-finding-out-application-name-using-dladdr
    Closes: #758556, 758531

 -- Felipe Sateler <fsateler@debian.org>  Tue, 26 Aug 2014 00:27:39 -0400

pulseaudio (5.0-10) experimental; urgency=medium

  * patch: try finding out binary name using dladdr

 -- Felipe Sateler <fsateler@debian.org>  Sun, 17 Aug 2014 13:40:57 -0400

pulseaudio (5.0-9) experimental; urgency=medium

  * More patches from upstream for kFreeBSD

 -- Felipe Sateler <fsateler@debian.org>  Sat, 16 Aug 2014 13:01:43 -0400

pulseaudio (5.0-8) experimental; urgency=medium

  * Pick some patches from upstream fixing tests

 -- Felipe Sateler <fsateler@debian.org>  Wed, 13 Aug 2014 23:59:16 -0400

pulseaudio (5.0-7) experimental; urgency=medium

  * Re-enable testsuite
    - Disable test suite timeouts
    - Apply patches from upstream to fix failures

 -- Felipe Sateler <fsateler@debian.org>  Tue, 05 Aug 2014 10:31:51 -0400

pulseaudio (5.0-6) unstable; urgency=medium

  * Fix gnu-kfreebsd.patch typo (missing !)
